--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+    <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
+    <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
+    <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
     <link rel="import" href="bower_components/gold-email-input/gold-email-input.html">
     <link rel="import" href="bower_components/paper-input/paper-input.html">
 </head>
-<body>
-    <header>
-       <span class="company-name">🂡 Cam's Company 🂡</span>
-       <span class="company-page">Checkout Page</span>
-    </header>
+<body class="fullbleed vertical layout">
+    <paper-header-panel class="flex">
+        <paper-toolbar>
+            <div>Event Ticket Service/div>
+        </paper-toolbar>
+        <div>Content</div>
+    </paper-header-panel>
 
     <section class="progress-bar">
         Seems like this could be a good place for a progress bar...
