comment out style sheet, external font, almost all form inputs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quiz - One Big, Ugly Form</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/styles.css">
+    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>-->
+    <!--<link rel="stylesheet" href="css/styles.css">-->
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
     <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
@@ -16,16 +16,15 @@
 <body class="fullbleed vertical layout">
     <paper-header-panel class="flex">
         <paper-toolbar>
-            <div>Event Ticket Service/div>
+            <div>Event Ticket Service</div>
         </paper-toolbar>
         <div>Content</div>
     </paper-header-panel>
 
-    <section class="progress-bar">
+  <!--  <section class="progress-bar">
         Seems like this could be a good place for a progress bar...
-    </section>
+    </section> -->
 
-    <section class="form">
 
         <h3>Your Name and Demographic Information</h3>
 
@@ -42,7 +41,7 @@
             <label for="mailinglist">Send me emails<input id="mailinglist" type="checkbox" checked></label>
         </form>
 
-        <h3>Your Shipping Address</h3>
+    <!--    <h3>Your Shipping Address</h3>
 
         <form>
             <label>Name<input type="text"></label>
@@ -53,9 +52,9 @@
             <label>State/Province<input type="text"></label>
             <label>Postal Code<input type="text"></label>
             <label>Country<input type="text"></label>
-        </form>
+        </form> -->
 
-        <h3>Your Credit Card Information</h3>
+    <!--    <h3>Your Credit Card Information</h3>
 
         <div class="cc-warning"><em>Note: don't enter any actual credit card info!</em></div>
 
@@ -113,7 +112,6 @@
 		      <input type="text">
 		    </label>
 		</form>
-    </section>
 
     <section class="order-review">
 	    <h3>Your Order</h3>
@@ -148,7 +146,7 @@
 		    </label>
 		    <input id="submit" type="submit">
 		</form>
-    </section>
+    </section> -->
 
     <script>
 
