change age input to polymer paper input label

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <paper-input label="your first and last name"></paper-input>
             </label>
 
-            <label for="age">Age<input type="number" min="18" max="99" id="age"></label>
+            <label for="age">
+                <paper-input label="your age" type="number" min="18" max="99" id="age"></label>
 
             <label for="email">
                 <gold-email-input label="your email address"></gold-email-input>
