add paper progress bar to header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="import" href="bower_components/paper-input/paper-input.html">
     <link rel="import" href="bower_components/paper-button/paper-button.html">
     <link rel="import" href="bower_components/iron-form/iron-form.html">
+    <link rel="import" href="bower_components/paper-progress/paper-progress.html">
 </head>
 <body class="fullbleed vertical layout">
     <paper-header-panel class="flex">
@@ -27,27 +28,25 @@
   <!--  <section class="progress-bar">
         Seems like this could be a good place for a progress bar...
     </section> -->
+    <paper-progress value="10"></paper-progress>
 
+    <h3>Your Name and Demographic Information</h3>
 
-        <h3>Your Name and Demographic Information</h3>
+    <form is="iron-form" id="form" method="post" action="/form/handler" label="Purchase">
+        <label for="name">
+            <paper-input label="your first and last name"></paper-input>
+        </label>
+        <label for="age">
+            <paper-input label="your age" type="number" min="18" max="99" id="age"></label>
+        <label for="email">
+            <gold-email-input label="your email address"></gold-email-input>
+        </label>
+        <label for="phone">
+            <gold-phone-input label="your phone number"></gold-phone-input>
+        </label>
+    </form>
 
-        <form is="iron-form" id="form" method="post" action="/form/handler">
-            <label for="name">
-                <paper-input label="your first and last name"></paper-input>
-            </label>
-
-            <label for="age">
-                <paper-input label="your age" type="number" min="18" max="99" id="age"></label>
-
-            <label for="email">
-                <gold-email-input label="your email address"></gold-email-input>
-            </label>
-            <label for="phone">
-                <gold-phone-input label="your phone number"></gold-phone-input>
-            </label>
-        </form>
-
-        <paper-button raised onclick="submitForm()">Submit</paper-button>
+    <paper-button raised onclick="submitForm()">Submit</paper-button>
 
     <!--    <h3>Your Shipping Address</h3>
 
@@ -159,10 +158,10 @@
 
     <script>
 
-        var submit = document.querySelector('#submit');
+     /*   var submit = document.querySelector('#submit');
         submit.onclick = function () {
             alert("All of your information was valid, right? I'll just go ahead and assume that it is ;)\n\nThanks for your submission!");
-        };
+        };*/
 
     </script>
 
