change form inputs to address

--- a/custom-elements/custom-form.html
+++ b/custom-elements/custom-form.html
@@ -1,15 +1,16 @@
 <template>
     <form is="iron-form" id="form" method="post" action="/form/handler" label="Purchase">
         <label for="name">
-            <paper-input label="your first and last name"></paper-input>
+            <paper-input label="Name"></paper-input>
         </label>
-        <label for="age">
-            <paper-input label="your age" type="number" min="18" max="99" id="age"></label>
-        <label for="email">
-            <gold-email-input label="your email address"></gold-email-input>
+        <label for="address1">
+            <paper-input label="Address line 1">
         </label>
-        <label for="phone">
-            <gold-phone-input label="your phone number"></gold-phone-input>
+        <label for="address2">
+            <paper-input label="Address line 2">
+        </label>
+        <label for="address3">
+            <paper-input label="Address line 3">
         </label>
     </form>
 </template>
